--- a/tasks/03_mysql.yaml
+++ b/tasks/03_mysql.yaml
@@ -1,6 +1,7 @@
 ---
 - name: Install and configure MySQL
   hosts: webservers
+  become: yes
   remote_user: root
   vars_files:
     - ../vars/mysql.yaml
