--- a/tasks/06_additional_tools.yaml
+++ b/tasks/06_additional_tools.yaml
@@ -1,43 +1,49 @@
 ---
-- name: Install additional Pimcore tools
+- name: Install additional tools
   hosts: webservers
   remote_user: root
   vars_files:
-    - ../vars/pimcore_tools.yaml
+    - ../vars/additional_tools.yaml
   tasks:
+  - name: ImageMagick 
+    apt:
+      pkg:
+        - imagemagick
+      state: present
+      update_cache: yes
   - name: ZopfliPNG
     get_url:
       url: https://github.com/imagemin/zopflipng-bin/raw/master/vendor/linux/zopflipng
-      dest: "{{ addional_tools_binaries_folder }}/zopflipng"
+      dest: "{{ additional_tools_binaries_folder }}/zopflipng"
       mode: 0755
       timeout: 60
   - name: PngCrush
     get_url:
       url: https://github.com/imagemin/pngcrush-bin/raw/master/vendor/linux/pngcrush
-      dest: "{{ addional_tools_binaries_folder }}/pngcrush"
+      dest: "{{ additional_tools_binaries_folder }}/pngcrush"
       mode: 0755
       timeout: 60
   - name: JPEGOptim
     get_url:
       url: https://github.com/imagemin/jpegoptim-bin/raw/master/vendor/linux/jpegoptim
-      dest: "{{ addional_tools_binaries_folder }}/jpegoptim"
+      dest: "{{ additional_tools_binaries_folder }}/jpegoptim"
       mode: 0755
       timeout: 60
   - name: PNGOut
     get_url:
       url: https://github.com/imagemin/pngout-bin/raw/master/vendor/linux/x64/pngout
-      dest: "{{ addional_tools_binaries_folder }}/pngout"
+      dest: "{{ additional_tools_binaries_folder }}/pngout"
       mode: 0755
       timeout: 60
   - name: AdvPNG
     get_url:
       url: https://github.com/imagemin/advpng-bin/raw/master/vendor/linux/advpng
-      dest: "{{ addional_tools_binaries_folder }}/advpng"
+      dest: "{{ additional_tools_binaries_folder }}/advpng"
       mode: 0755
       timeout: 60
   - name: MozJPEG
     get_url:
       url: https://github.com/imagemin/mozjpeg-bin/raw/master/vendor/linux/cjpeg
-      dest: "{{ addional_tools_binaries_folder }}/cjpeg"
+      dest: "{{ additional_tools_binaries_folder }}/cjpeg"
       mode: 0755
       timeout: 60
