add Certbot Apache plugin; set python3 as python interpreter

--- a/tasks/03_mysql.yaml
+++ b/tasks/03_mysql.yaml
@@ -5,5 +5,8 @@
   remote_user: root
   vars_files:
     - ../vars/mysql.yaml
+  pre_tasks:
+    - name: installing python-3 mysql libraries
+      apt: name=python3-mysqldb state=present
   roles:
     - geerlingguy.mysql
