--- a/tasks/01_bootstrap.yaml
+++ b/tasks/01_bootstrap.yaml
@@ -34,6 +34,7 @@
         - curl
         - git
         - tig
+        - ncdu
       state: present
       update_cache: yes
   - name: Add default user
