upgrade to PHP 7.4

--- a/tasks/01_bootstrap.yaml
+++ b/tasks/01_bootstrap.yaml
@@ -35,6 +35,7 @@
         - git
         - tig
         - ncdu
+        - zip
       state: present
       update_cache: yes
   - name: Add default user
