--- a/vars/php.yaml
+++ b/vars/php.yaml
@@ -1,18 +1,19 @@
 ---
-php_version: '7.2'
+php_version: '7.4'
 php_enable_php_fpm: true
 php_webserver_daemon: "apache2"
 php_date_timezone: "Europe/Prague"
 php_short_open_tag: true
 php_packages_extra:
-  - php7.2-bcmath
-  - php7.2-bz2
-  - php7.2-gd
-  - php7.2-intl
-  - php7.2-json
-  - php7.2-mbstring
-  - php7.2-mysql
-  - php7.2-soap
-  - php7.2-xml
-  - php7.2-zip
-  - php7.2-imagick
+  - php7.4-bcmath
+  - php7.4-bz2
+  - php7.4-curl
+  - php7.4-gd
+  - php7.4-imagick
+  - php7.4-intl
+  - php7.4-json
+  - php7.4-mbstring
+  - php7.4-mysql
+  - php7.4-soap
+  - php7.4-xml
+  - php7.4-zip
