--- a/main.yaml
+++ b/main.yaml
@@ -5,3 +5,4 @@
 - import_playbook: ./tasks/04_php.yaml
 - import_playbook: ./tasks/05_certbot.yaml
 - import_playbook: ./tasks/06_additional_tools.yaml
+- import_playbook: ./tasks/07_elasticsearch.yaml
