--- a/vars/certbot.yaml
+++ b/vars/certbot.yaml
@@ -2,5 +2,5 @@
 certbot_auto_renew_user: root
 certbot_auto_renew_minute: "30"
 certbot_auto_renew_hour: "3"
-certbot_auto_renew_options: "--quiet --no-self-upgrade"
+certbot_auto_renew_options: "--quiet --no-self-upgrade --apache"
 certbot_admin_email: martin.chix.kuric@gmail.com
